<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_round_edge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:id="@+id/loginTitle"
            android:background="@color/lightBlue1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginAccount"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEmail1"
            app:errorEnabled="true"
            android:layout_below="@id/loginTitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputEmailHint"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputPassword1"
            app:errorEnabled="true"
            android:layout_below="@id/textInputEmail1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputPasswordHint"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="15dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember"
            android:layout_below="@id/textInputPassword1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/remember"
            android:textSize="18sp"
            android:layout_marginBottom="27dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>