<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageSliderView">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderCircularHandlerEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />
        </androidx.cardview.widget.CardView>

        <include
            layout="@layout/cardview_login"
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageSliderView"
            android:layout_marginTop="-25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_below="@id/loginContainer"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_edge"
            android:layout_marginTop="-25dp"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressBar"
            android:layout_below="@id/loginContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-25dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/loginButton"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:textSize="22sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createAccount"
                android:textSize="22sp"
                android:paddingLeft="7dp"/>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>